<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionActivity"
    android:background="#000000">

    <ImageView
        android:id="@+id/singleim"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/singledescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/single" />

    <ImageView
        android:id="@+id/multipleim"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/multipledescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singleim"
        app:srcCompat="@drawable/multiple" />

    <TextView
        android:id="@+id/singletv"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/single"
        android:textAllCaps="true"
        android:textColor="#efa8e4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/multipletv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toEndOf="@+id/singleim"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207" />

    <TextView
        android:id="@+id/multipletv"
        android:layout_width="180sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="140dp"
        android:text="@string/multiple"
        android:textAllCaps="true"
        android:textColor="#efa8e4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/chordstv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/multipleim" />

    <ImageView
        android:id="@+id/chordsim"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multipleim"
        app:srcCompat="@drawable/chords" />

    <TextView
        android:id="@+id/chordstv"
        android:layout_width="180sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:text="@string/chords"
        android:layout_marginLeft="25dp"
        android:textAllCaps="true"
        android:textColor="#efa8e4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/chordsim" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:shadowColor="#ffffff"
        android:shadowDx="-6"
        android:shadowDy="-6"
        android:shadowRadius="8"
        android:text="@string/heading"
        android:textAllCaps="true"
        android:textColor="#ff1e56"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>