<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListSingleActivity"
    android:background="#000000">

    <TextView
        android:id="@+id/singleheadtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:background="@drawable/headingborder"
        android:text="@string/single"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvhappy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvhappy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:layout_marginBottom="52dp"
        android:padding="20dp"
        android:textAlignment="center"
        android:shadowColor="#fa86be"
        android:shadowDx="-6"
        android:shadowDy="-6"
        android:shadowRadius="8"
        android:text="@string/HappyBirthday"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@+id/tvtwinkle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvtwinkle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:padding="20dp"
        android:paddingLeft="100sp"
        android:shadowColor="#fa86be"
        android:shadowDx="-6"
        android:shadowDy="-6"
        android:shadowRadius="8"
        android:textAlignment="center"
        android:text="@string/TwinkleTwinkle"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@+id/tvvande"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvvande"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:padding="20dp"
        android:paddingLeft="100sp"
        android:shadowColor="#fa86be"
        android:shadowDx="-6"
        android:shadowDy="-6"
        android:shadowRadius="8"
        android:text="@string/VandeMataram"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@+id/tvjana"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />

    <TextView
        android:id="@+id/tvjana"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:padding="20dp"
        android:paddingLeft="100sp"
        android:shadowColor="#fa86be"
        android:shadowDx="-6"
        android:shadowDy="-6"
        android:shadowRadius="8"
        android:text="@string/JanaGanamana"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@+id/tvmunjaane"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvmunjaane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:paddingLeft="100sp"
        android:shadowColor="#fa86be"
        android:shadowDx="-6"
        android:shadowDy="-6"
        android:shadowRadius="8"
        android:text="@string/MunjaaneManjalli"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>