<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListChordsActivity"
    android:background="#000000">

    <TextView
        android:id="@+id/chordsheadtv"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:paddingTop="20sp"
        android:background="@drawable/headingborder"
        android:text="@string/chords"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvsalutillave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvsalutillave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/border"
        android:padding="20dp"
        android:shadowColor="#fa86be"
        android:shadowDx="-6"
        android:shadowDy="-6"
        android:shadowRadius="8"
        android:text="@string/salutillave"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvhangover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <TextView
        android:id="@+id/tvhangover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:background="@drawable/border"
        android:padding="20dp"
        android:paddingLeft="100sp"
        android:shadowColor="#fa86be"
        android:shadowDx="-6"
        android:shadowDy="-6"
        android:shadowRadius="8"
        android:text="@string/hangover"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvondu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvondu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:background="@drawable/border"
        android:padding="20dp"
        android:paddingLeft="100sp"
        android:shadowColor="#fa86be"
        android:shadowDx="-6"
        android:shadowDy="-6"
        android:shadowRadius="8"
        android:text="@string/OnduMalebillu"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvsunraha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvsunraha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:padding="20dp"
        android:paddingLeft="100sp"
        android:shadowColor="#fa86be"
        android:shadowDx="-6"
        android:shadowDy="-6"
        android:shadowRadius="8"
        android:text="@string/sunraha"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@+id/tvsenorita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvsenorita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:paddingLeft="100sp"
        android:shadowColor="#fa86be"
        android:shadowDx="-6"
        android:shadowDy="-6"
        android:shadowRadius="8"
        android:text="@string/senorita"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>